--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Data Entry/Reciever <span class="text-muted h6">at Provincial Accounting Office (Camiguin) </span></div>
+          <div class="h5 mb-1">Data Entry/Receiver <span class="text-muted h6">at Provincial Accounting Office (Camiguin) </span></div>
           <div class="text-muted text-small mb-2">September, 2017 - December, 2019</div>
           <div>Incharge in Incoming and Outgoing voucher in every Offices.</div>
         </div>
